--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </li>
             <li>
                 <h4>GitHub</h4>
-                <a href="https://github.com/alex-cavaliere/AlessandroCavaliere_2_21052021">GitHub</a>
+                <a href="https://github.com/alex-cavaliere/AlessandroCavaliere_2_21052021" target="_blank">GitHub</a>
             </li>
         </ul>
         <h3></h3>
