--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <div id="main" class="flexbox_row">
-        <section id="produzioni" class="flexbox">
+        <section id="produzioni" class="flexbox_row">
             <h2>Produzioni</h2>
             <div class="song flexbox">
                 <audio controls>
