--- a/index.html
+++ b/index.html
@@ -4,42 +4,89 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Alessandro Cavaliere</title>
     <!--questa pagina é un test per il mio sito. Lo scopo é creare un interfaccia
     che sia moderno e che contenga canzoni e altro-->
 </head>
 <body>
-    <header class="flexbox_row">
-        <h1>Alessandro Cavaliere</h1>
-        <h2>Music Production</h2>
-        <nav>
-            <ul class="flexbox_row">
-                <li><a href="#footer">contatti</a></li>
-                <li onclick="tenda()"><a href="#">musica</a>
-                    <ul id="tenda">
-                        <li><a href="#">Rock</a></li>
-                        <li><a href="#">Funky</a></li>
-                        <li><a href="#">Blues</a></li>
-                        <li><a href="#">Pop</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">supporto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div id="main" class="flexbox_row">
-        <section id="produzioni" class="flexbox_row">
-            <h2>Produzioni</h2>
-            <div class="song flexbox">
-                <audio controls>
+    <div class="bg-dark">
+        <header class="container">
+            <div class="row">
+                <div class="col">
+                    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+                        <a class="navbar-brand" href="#">Alessandro Cavaliere</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item active">
+                                    <a class="nav-link text-white" href="#">Chi sono</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">Produzioni</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">Contatti</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Generi Musicali
+                                    </a>
+                                    <div class="dropdown-menu bg-dark dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item text-white" href="#">Rock</a>
+                                        <a class="dropdown-item text-white" href="#">Blues</a>
+                                        <a class="dropdown-item text-white" href="#">Funky</a>
+                                        <a class="dropdown-item text-white" href="#">Soul</a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>    
+                    </nav>
+                </div>
+            </div>
+        </header>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div id="carouselIndicators" class="carousel slide img-fluid" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="foto/testimonial-img.png" alt="1st photo">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="foto/about.png" alt="2nd photo">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="foto/5.jpg" alt="3rd photo">
+                        </div>
+                    </div> 
+                    <a class="carousel-control-prev carousel-dark" href="#carouselIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only"></span>      
+                    </a>
+                    <a class="carousel-control-next carousel-dark" href="#carouselIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="main" class="container">
+        <section id="produzioni" class="row mt-4">
+            <h2 class="text-center">Produzioni</h2>
+            <div class="col-lg-4 col-md-6 mt-2">
+                <audio controls >
                     <source src="perfect_1.wav" type="audio/wav">
-                    <source src="perfect_1.mp3" type="audio/mpeg">
                     <source src="perfect_1.ogg" type="audio/ogg">
+                    <source src="perfect_1.mp3" type="audio/mpeg">
                 </audio>
                 <p>cover di Ed Sheeran - Perfect</p>
             </div>
-            <div class="song flexbox">
+            <div class="col-lg-4 col-md-6 mt-2">
                 <audio controls>
                     <source src="produzioni/jeremy def.wav" type="audio/wav">
                     <source src="produzioni/jeremy def.mp3" type="audio/mpeg">
@@ -47,7 +94,7 @@
                 </audio>
                 <p>cover di Pearl Jam - Alessandro Cavaliere</p>
             </div>
-            <div class="song flexbox">
+            <div class="col-lg-4 col-md-6 mt-2">
                 <audio controls>
                     <source src="produzioni/Il Canto Delle Cicale.wav" type="audio/wav">
                     <source src="produzioni/Il Canto Delle Cicale.mp3" type="audio/mpeg">
@@ -55,7 +102,7 @@
                 </audio>
                 <p>Il Canto Delle Cicale - Alessandro Cavaliere</p>
             </div> <!-- fare altre copie di questo tipo di div -->
-            <div class="song flexbox">
+            <div class="col-lg-4 col-md-6 mt-2">
                 <audio controls>
                     <source src="produzioni/Eddy.wav" type="audio/wav">
                     <source src="produzioni/Eddy.mp3" type="audio/mpeg">
@@ -63,7 +110,7 @@
                 </audio>
                 <p>Eddy - Alessandro Cavaliere</p>
             </div>
-            <div class="song flexbox">
+            <div class="col-lg-4 col-md-6 mt-2">
                 <audio controls>
                     <source src="produzioni/fort boyar film.wav" type="audio/wav">
                     <source src="produzioni/fort boyar prima.mp3" type="audio/mpeg">
@@ -71,7 +118,7 @@
                 </audio>
                 <p>Rock Boyar - Alessandro Cavaliere</p>
             </div>
-            <div class="song flexbox">
+            <div class="col-lg-4 col-md-6 mt-2">
                 <audio controls>
                     <source src="produzioni/slappy - Film .wav" type="audio/wav">
                     <source src="produzioni/slappy - Film .mp3" type="audio/mpeg">
@@ -80,8 +127,15 @@
                 <p>Slappy - Alessandro Cavaliere</p>
             </div>
         </section>
-        <section id="articoli" class="flexbox">
-            <div id="articolo_1">
+        <div class="row">
+            <div class="col text-center">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item mt-5" src="https://www.youtube.com/embed/et6dCoYCj4A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+        <section id="articoli" class="row mt-5">
+            <div id="articolo_1" class="col-4">
                 <h2>Articolo 1</h2>
                 <article>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
@@ -90,7 +144,7 @@
                     similique ipsa, quod velit ullam cumque.
                 </article>
             </div>
-            <div id="articolo_2">
+            <div id="articolo_2" class="col-4">
                 <h2>Articolo 2</h2>
                 <article>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
@@ -99,7 +153,7 @@
                     similique ipsa, quod velit ullam cumque.
                 </article>
             </div>
-            <div id="articolo_3">
+            <div id="articolo_3" class="col-4">
                 <h2>Articolo 3</h2>
                 <article>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
@@ -110,24 +164,29 @@
             </div>
         </section>
     </div>
-    <footer id="footer">
-        <h3>Contacts</h3>
-        <ul class="flexbox_row">
-            <li>
-                <h4>e-mail</h4>
-                <a href="mailto:alexcavaliere517@gmail.com">alexcavaliere517@gmail.com</a>
-            </li>
-            <li>
-                <h4>LinkedIn</h4>
-                <a href="https://www.linkedin.com/in/alessandro-cavaliere-337882211/" target="_blank">LinkedIn</a>
-            </li>
-            <li>
-                <h4>GitHub</h4>
-                <a href="https://github.com/alex-cavaliere/AlessandroCavaliere_2_21052021" target="_blank">GitHub</a>
-            </li>
-        </ul>
-        <h3></h3>
-    </footer>
-    <script src="test_2.js"></script>
+    <div class="bg-dark">
+        <footer id="footer" class="container mt-5 pb-2 pt-4 bg-dark">
+                <ul class="row">
+                    <li class="col-4 text-center">
+                        <a href="mailto:alexcavaliere517@gmail.com">
+                            <h3>e-mail</h3>
+                        </a>
+                    </li>
+                    <li class="col-4 text-center">
+                        <a href="https://www.linkedin.com/in/alessandro-cavaliere-337882211/" target="_blank">
+                            <h3>LinkedIn</h3>
+                        </a>
+                    </li>
+                    <li class="col-4 text-center">
+                        <a href="https://github.com/alex-cavaliere/AlessandroCavaliere_2_21052021" target="_blank">
+                            <h3>GitHub</h3>
+                        </a>
+                    </li>
+                </ul>
+        </footer>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
