--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <div id="carouselIndicators" class="carousel slide img-fluid" data-ride="carousel">
+                <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="foto/testimonial-img.png" alt="1st photo">
@@ -178,7 +178,7 @@
                         </a>
                     </li>
                     <li class="col-4 text-center">
-                        <a href="https://github.com/alex-cavaliere/AlessandroCavaliere_2_21052021" target="_blank">
+                        <a href="https://github.com/alex-cavaliere" target="_blank">
                             <h3>GitHub</h3>
                         </a>
                     </li>
