--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="container">
             <div class="row">
                 <div class="col">
-                    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+                    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
                         <a class="navbar-brand" href="#">Alessandro Cavaliere</a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
                 <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="foto/testimonial-img.png" alt="1st photo">
+                            <img class="d-block w-100 d-md-block w-75" src="foto/testimonial-img.png" alt="1st photo">
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="foto/about.png" alt="2nd photo">
