--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <header class="container">
             <div class="row">
                 <div class="col">
-                    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+                    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
                         <a class="navbar-brand" href="#">Alessandro Cavaliere</a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                            <ul class="navbar-nav ms-auto">
+                            <ul class="navbar-nav">
                                 <li class="nav-item active">
                                     <a class="nav-link text-white" href="#">Chi sono</a>
                                 </li>
@@ -54,7 +54,7 @@
                 <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100 d-md-block w-75" src="foto/testimonial-img.png" alt="1st photo">
+                            <img class="d-block w-100" src="foto/testimonial-img.png" alt="1st photo">
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="foto/about.png" alt="2nd photo">
@@ -127,7 +127,7 @@
                 <p>Slappy - Alessandro Cavaliere</p>
             </div>
         </section>
-        <div class="row">
+        <div id="video" class="row">
             <div class="col text-center">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item mt-5" src="https://www.youtube.com/embed/et6dCoYCj4A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
