--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                            <ul class="navbar-nav">
+                            <ul class="navbar-nav ms-auto">
                                 <li class="nav-item active">
                                     <a class="nav-link text-white" href="#">Chi sono</a>
                                 </li>
