--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
             </div>
             <div class="col-lg-4 col-md-6 mt-2">
                 <audio controls>
-                    <source src="produzioni/jeremy def.wav" type="audio/wav">
-                    <source src="produzioni/jeremy def.mp3" type="audio/mpeg">
-                    <source src="produzioni/jeremy def.ogg" type="audio/ogg">
+                    <source src="produzioni/jeremy_def.wav" type="audio/wav">
+                    <source src="produzioni/jeremy_def.mp3" type="audio/mpeg">
+                    <source src="produzioni/jeremy_def.ogg" type="audio/ogg">
                 </audio>
                 <p>cover di Pearl Jam - Alessandro Cavaliere</p>
             </div>
             <div class="col-lg-4 col-md-6 mt-2">
                 <audio controls>
-                    <source src="produzioni/Il Canto Delle Cicale.wav" type="audio/wav">
-                    <source src="produzioni/Il Canto Delle Cicale.mp3" type="audio/mpeg">
-                    <source src="produzioni/Il Canto Delle Cicale.ogg" type="audio/ogg">
+                    <source src="produzioni/Il_Canto_Delle_Cicale.wav" type="audio/wav">
+                    <source src="produzioni/Il_Canto_Delle_Cicale.mp3" type="audio/mpeg">
+                    <source src="produzioni/Il_Canto_Delle_Cicale.ogg" type="audio/ogg">
                 </audio>
                 <p>Il Canto Delle Cicale - Alessandro Cavaliere</p>
             </div> <!-- fare altre copie di questo tipo di div -->
@@ -112,17 +112,17 @@
             </div>
             <div class="col-lg-4 col-md-6 mt-2">
                 <audio controls>
-                    <source src="produzioni/fort boyar film.wav" type="audio/wav">
-                    <source src="produzioni/fort boyar prima.mp3" type="audio/mpeg">
-                    <source src="produzioni/fort boyar prima.ogg" type="audio/ogg">
+                    <source src="produzioni/fort_boyar_film.wav" type="audio/wav">
+                    <source src="produzioni/fort_boyar_prima.mp3" type="audio/mpeg">
+                    <source src="produzioni/fort_boyar_prima.ogg" type="audio/ogg">
                 </audio>
                 <p>Rock Boyar - Alessandro Cavaliere</p>
             </div>
             <div class="col-lg-4 col-md-6 mt-2">
                 <audio controls>
-                    <source src="produzioni/slappy - Film .wav" type="audio/wav">
-                    <source src="produzioni/slappy - Film .mp3" type="audio/mpeg">
-                    <source src="produzioni/slappy - Film .ogg" type="audio/ogg">
+                    <source src="produzioni/slappy-Film.wav" type="audio/wav">
+                    <source src="produzioni/slappy-Film.mp3" type="audio/mpeg">
+                    <source src="produzioni/slappy-Film.ogg" type="audio/ogg">
                 </audio>
                 <p>Slappy - Alessandro Cavaliere</p>
             </div>
@@ -130,37 +130,37 @@
         <div id="video" class="row">
             <div class="col text-center">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item mt-5" src="https://www.youtube.com/embed/et6dCoYCj4A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="embed-responsive-item mt-5" src="https://www.youtube.com/embed/et6dCoYCj4A" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
         <section id="articoli" class="row mt-5">
             <div id="articolo_1" class="col-4">
                 <h2>Articolo 1</h2>
-                <article>
+                <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
                     Dolores laudantium fugit minus eaque porro provident sequi<br> 
                     a possimus necessitatibus ipsam omnis nesciunt iste asperiores<br> 
                     similique ipsa, quod velit ullam cumque.
-                </article>
+                </p>
             </div>
             <div id="articolo_2" class="col-4">
                 <h2>Articolo 2</h2>
-                <article>
+                <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
                     Dolores laudantium fugit minus eaque porro provident sequi<br> 
                     a possimus necessitatibus ipsam omnis nesciunt iste asperiores<br> 
                     similique ipsa, quod velit ullam cumque.
-                </article>
+                </p>
             </div>
             <div id="articolo_3" class="col-4">
                 <h2>Articolo 3</h2>
-                <article>
+                <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br> 
                     Dolores laudantium fugit minus eaque porro provident sequi<br> 
                     a possimus necessitatibus ipsam omnis nesciunt iste asperiores<br> 
                     similique ipsa, quod velit ullam cumque.
-                </article>
+                </p>
             </div>
         </section>
     </div>
